k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata: {name: product-api}
spec:
  selector: {app.kubernetes.io/name: product-api}
  ports: [{name: http, port: 80, targetPort: http}]
  type: ClusterIP
